# pySWAP

./: .actrc  .coverage  .dockerignore  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .releaserc.json  404.html  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  MANIFEST.in  Makefile  README  README.md  coverage.xml  data.h5  index.html  mkdocs.yml  mypy.dev.ini  objects.inv  package-lock.json  package.json  pixi.toml  pyproject.toml  requirements.txt  setup.py  test_paper.sh
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: cd.yaml  changelog.yaml  ci.yaml  deploy.yaml  docs.yaml  main-pipeline.yaml.backup  publish-to-pypi.yaml  tests.yaml
binder/: postBuild  postBuilt  requirements.txt  start
blog/: index.html
contributing/: index.html
contributing/conventional-commits/: index.html
contributing/documentation/: index.html
contributing/imports/: index.html
contributing/makefile/: index.html
data/: 283.met  crop_input.csv  daily_basic_weather.csv  detailed_rainfall.csv  dra.json  irrigation_data.csv  irrigation_events.csv  short_interval.csv  swap.swp
data/templates/: irg_header.txt  met_header.txt  swp_10_endfile.txt  swp_1_header.txt  swp_2_general.txt  swp_3_meteo.txt  swp_41_irrigation.txt  swp_4_crop.txt  swp_5_soil-water.txt  swp_6_lateral-drainage.txt  swp_7_bottom-boundary.txt  swp_8_heat-flow.txt  swp_9_solute.txt
docs/: .pages  CONTRIBUTING.md  index.md  mkdocs.yml
docs/.vitepress/: config.mts
docs/blog/: index.md
docs/contributing/: conventional-commits.md  documentation.md  imports.md  index.md  makefile.md
docs/docs/: index.md
docs/guide/: getting-started.md  swp-module.md  what-is-pyswap.md
docs/md/: structure.md
docs/notebooks/: 1-hupselbrook.ipynb  create_swp.ipynb  new_createmodel.ipynb  running_models.ipynb  simsettings.txt
docs/reference/: .pages  developer.md  index.md  integrations.md  model-components.md  pixi-migration.md  pyswap-model.md  user.md  visualization.md
docs/references/: api-reference.md
docs/stylesheets/: extra.css
docs/tutorials/: 000-setting-up-hupselbrook.ipynb  001-basic-usage.ipynb  002-hdf5-database.ipynb  003-wofost-crop-db.ipynb  004-loading-classic-swap.ipynb  index.md
docs/user-guide/: .pages  4-subpackages.md  ascii-vs-classes.md  cli.md  data-structures.md  docker.md  hdf5.md  main-concepts.md  quick-start.md  run-parallel.md  to-classic-swap.md  using-hdf5-database.md
docs/wiki/: standard-array-lengths.md
etc/: environment.yml
notebooks/: 2-grassgrowth.ipynb
paper/: paper.bib  paper.md
pyswap/: __init__.py  log.py
pyswap/atmosphere/: __init__.py  meteodata.py  meteorology.py  metfile.py  tables.py
pyswap/base/: all_variables.json  boundary.py  dtypes.py  exeptions.py  metadata.py  model.py  simsettings.py  swaprun.py  swpsetup.py  utils.py
pyswap/boundary/: __init__.py  base.py  bbcfile.py  boundary.py
pyswap/components/: __init__.py  boundary.py  crop.py  drainage.py  irrigation.py  metadata.py  meteorology.py  simsettings.py  soilwater.py  tables.py  transport.py
pyswap/core/: __init__.py  basemodel.py  boundary.py  defaults.py  fields.py  files.py  importers.py  loaders.py  metadata.py  mixins.py  model.py  parsers.py  result.py  richards.py  serializers.py  simsettings.py  swpmodel.py  tablevalidation.py  validation.yaml  valueranges.py
pyswap/db/: __init__.py  co2concentration.py  cropdb.py  dutchsoilprofiles.py  hdf5.py
pyswap/drainage/: __init__.py  drafile.py  drainage.py
pyswap/extras/: __init__.py  heatflow.py  solutetransport.py  tables.py
pyswap/gis/: __init__.py  location.py
pyswap/io/: load_legacy.py  read.py  read_yaml.py  tables.py  to_code.py  write.py
pyswap/irrigation/: __init__.py  irgfile.py  irrigation.py  tables.py
pyswap/libs/: LICENSE  __init__.py  validation.yaml
pyswap/model/: __init__.py  metadata.py  model.py  result.py
pyswap/plant/: __init__.py  create_crp_tables.py  crop.py  crpfile.py  read_yaml.py  tables.py
pyswap/simsettings/: __init__.py  general.py  location.py  metadata.py  richards.py
pyswap/soilwater/: __init__.py  drainage.py  evaporation.py  irrigation.py  richards.py  snow.py  soilmoisture.py  soilprofile.py  surfaceflow.py  tables.py
pyswap/templates/: CROPFIL_FIXED.template  SWAP.template
pyswap/testcase/: __init__.py  grassgrowth.py  hupsel.ipynb  hupsel.py  hupselbrook.py  load_data.py  load_dataset.py  loda_dataset.py  macroporeflow.py  oxygenstress.py  run_testcase.py  salinitystress.py  simple_test_model.py  surfacewater.py  testmodel_complex.py
pyswap/tests/: test_boundary.py  test_cases.py  test_cli.py  test_db.py  test_location.py  test_metadata.py
pyswap/utils/: executables.py  loaders.py  mixins.py  old_swap.py
reference/: index.html
reference/api-reference/: index.html
reference/developer/: index.html
reference/integrations/: index.html
reference/model-components/: index.html
reference/pyswap-model/: index.html
reference/visualization/: index.html
scripts/: lib_from_json.py
search/: search_index.json
stylesheets/: extra.css
tests/: conftest.py  main_test.ipynb  test_basemodel.py  test_bofeksoilprofile.py  test_cases.py  test_cli.py  test_co2concentration.py  test_cropdb.py  test_database.py  test_dutchsoilprofiledb.py  test_fields.py  test_io.py  test_location.py  test_main.py  test_meteo.py  test_read_swp.py  test_simsettings.py  test_yaml_update_mixin.py
tests/data/: swap.swp
tests/test_bofeksoilprofile/: bofek1001.csv  bofek1001_hf.csv  bofek1001_sp.csv
tests/test_co2concentration/: Atmospheric.co2
tests/test_dutchsoilprofile/: bofek1001_hf.csv  bofek1001_sp.csv
tests/test_meteo/: test_knmi.csv  test_meteo_1.csv  test_meteo_2.csv  test_meteo_3.csv  test_meteo_4.csv  test_meteo_5.csv
tutorials/: index.html
tutorials/000-setting-up-hupselbrook/: index.html
tutorials/001-basic-usage/: index.html
tutorials/002-hdf5-database/: index.html
tutorials/003-wofost-crop-db/: index.html
(+174 files in other folders)
