[project]
name = "pyswap"
version = "0.3.0"
description = "Python wrapper for SWAP hydrological model."
authors = [{name = "Mateusz", email = "zawadzkimat@outlook.com"}]
license = "MIT"
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
include = ["pyswap*"]
exclude = ["tests*", "docs*", "site*", "paper*", "node_modules*"]

[project.urls]
Repository = "https://github.com/zawadzkim/pyswap"
Documentation = "https://zawadzkim.github.io/pyswap/"

[project.scripts]
pyswap = "pyswap.core.cli.cli:app"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
